objects/Opportunity_Flow__c.object
<CustomObject>
    <description>Dashboard summary data object</description>
    <fields>
        <fullName>Amount_New_in_Stage__c</fullName>
        <label>Amount New in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_New_in_Stage__c</fullName>
        <label>Count New in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Flows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Flow</label>
    <nameField>
        <label>Opportunity Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>